# arxiv_wrapper

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  main.rs  models.rs  parser.rs
src/models/: entry.rs  feed.rs  query.rs
